--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
   flutter_svg: ^2.0.10+1
+  zoom_tap_animation: ^1.1.0
   google_fonts: ^6.2.1
 
 dev_dependencies:
